--- a/scss/forms.scss
+++ b/scss/forms.scss
@@ -14,9 +14,21 @@ input[type="text"], input[type="file"], textarea {
 }
 
 input, button, textarea {
-	color: white;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	background-color: $base03;
+	color: $base3;
+	border: 1px solid $base3;
+	transition: 0.5s ease-in-out;
+	border-radius: 4px;
+}
+
+button:hover {
+	background-color: $base3;
+	color: $base03;
 }
 
 #photo {
+	background: inherit;
 	color: inherit;
 }
